--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,21 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Monda:wght@400;700&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Roboto Condensed', sans-serif;
-    &:before{
+  font-family: 'Monda', sans-serif;
+  &:before{
     content:'';
     content: "";
     width: 100%;
     height: 100vh;
     background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
-    // background: #D3D3D3;
-    background-image: url("../public/bg.png");
+    background: #D3D3D3;
+    background-image: url("../public/bg.jpg");
     position: fixed;
     left: 0;
     top: 0;
