--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Monda:wght@400;700&display=swap');
 html,
 body {
-  padding: 0;
+  padding: 0px;
   margin: 0;
   font-family: 'Monda', sans-serif;
   &:before{
@@ -14,7 +14,7 @@ body {
     width: 100%;
     height: 100vh;
     background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
-    background: #D3D3D3;
+    background: #c6dbeb;
     background-image: url("../public/bg.jpg");
     position: fixed;
     left: 0;
